[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.4",
    "ipykernel>=6.30.1",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "scikit-learn>=1.7.2",
]
